fix a z-index issue

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ a {
   background: url("./images/stacks.png");
   background-size: cover;
   opacity: 0.3;
-  z-index: 9;
+  z-index: -1;
 }
 
 #content {
